# game-studio-ai

./: .env.example  .gitignore  README.md  pyproject.toml  runner.py
agents/tier1/: creative_director.md  producer.md  technical_director.md
agents/tier2/: art_director.md  audio_director.md  game_designer.md  lead_programmer.md  localization_lead.md  narrative_director.md  qa_lead.md  release_manager.md
agents/tier3/: accessibility_specialist.md  ai_programmer.md  analytics_engineer.md  community_manager.md  devops_engineer.md  economy_designer.md  engine_programmer.md  gameplay_programmer.md  level_designer.md  live_ops_designer.md  network_programmer.md  performance_analyst.md  prototyper.md  qa_tester.md  security_engineer.md  sound_designer.md  systems_designer.md  technical_artist.md  tools_programmer.md  ui_programmer.md  ux_designer.md  world_builder.md  writer.md
config/: models.yaml  schema_types.yaml  validators.yaml
config/engines/: godot4.yaml  unity.yaml  unreal5.yaml
docs/: agents.md  api.md  engines.md  plans.md  quick-start.md
plans/templates/: code_review.yaml  design_feature.yaml  design_level.yaml  generate_sprites.yaml  write_dialogue.yaml
src/api/: main.py
src/engines/: detect.py  loader.py
src/generators/: godot4_skeleton.py
src/mergers/: godot4_world.py
src/models/: client.py  router.py
src/orchestrator/: agent_loader.py  context.py  context_manager.py  engine.py  gate.py
src/sprites/: generator.py  (+2 more)
tests/: test_api.py  test_engines.py  test_models.py  test_orchestrator.py  test_spec_integration.py  test_validators.py
(+25 files in other folders)
